--- a/utils.html
+++ b/utils.html
@@ -72,10 +72,14 @@
       <li><a href="#script_output_retry">script_output_retry</a></li>
       <li><a href="#script_run_interactive">script_run_interactive</a></li>
       <li><a href="#create_btrfs_subvolume">create_btrfs_subvolume</a></li>
+      <li><a href="#create_raid_loop_device">create_raid_loop_device</a></li>
       <li><a href="#file_content_replace">file_content_replace</a></li>
       <li><a href="#assert_file_content-assert_file_content-path-value">assert_file_content assert_file_content( &quot;path&quot;, value );</a></li>
       <li><a href="#ensure_ca_certificates_suse_installed-ensure_ca_certificates_suse_installed">ensure_ca_certificates_suse_installed ensure_ca_certificates_suse_installed();</a></li>
       <li><a href="#install_patterns-install_patterns">install_patterns install_patterns();</a></li>
+      <li><a href="#permit_root_ssh-permit_root_ssh">permit_root_ssh permit_root_ssh();</a></li>
+      <li><a href="#permit_root_ssh_in_sol-permit_root_ssh_in_sol">permit_root_ssh_in_sol permit_root_ssh_in_sol();</a></li>
+      <li><a href="#cleanup_disk_space-cleanup_disk_space">cleanup_disk_space cleanup_disk_space();</a></li>
     </ul>
   </li>
 </ul><h1>lib/utils.pm</h1>
@@ -545,6 +549,14 @@
 
 <p>Create btrfs subvolume for <code>/boot/grub2/arm64-efi</code> before migration. ref:bsc#1122591</p>
 
+<h2 id="create_raid_loop_device">create_raid_loop_device</h2>
+
+<pre><code> create_raid_loop_device([raid_type =&gt; $raid_type], [device_num =&gt; $device_num], [file_size =&gt; $file_size]);</code></pre>
+
+<p>Create a raid array over loop devices. Raid type is <code>$raid_type</code>, using <code>$device_num</code> number of loop device, with the size of each device being <code>$file_size</code> megabytes.</p>
+
+<p>Example to create a RAID <code>5</code> array over <code>3</code> loop devices, <code>200</code> Mb each: create_raid_loop_device(raid_type =&gt; 5, device_num =&gt; 3, file_size =&gt; 200)</p>
+
 <h2 id="file_content_replace">file_content_replace</h2>
 
 <pre><code> file_content_replace(&quot;filename&quot;,
@@ -569,6 +581,18 @@
 <h2 id="install_patterns-install_patterns">install_patterns install_patterns();</h2>
 
 <p>This functions install extra patterns if var PATTERNS is set.</p>
+
+<h2 id="permit_root_ssh-permit_root_ssh">permit_root_ssh permit_root_ssh();</h2>
+
+<p>Due to bsc#1173067, openssh now no longer allows RootLogin using password auth on Tumbleweed, the latest SLE16 and Leap16 will sync with Tumbleweed as well.</p>
+
+<h2 id="permit_root_ssh_in_sol-permit_root_ssh_in_sol">permit_root_ssh_in_sol permit_root_ssh_in_sol();</h2>
+
+<p>for ipmi backend, PermitRootLogin has to be set in sol console however, assert_script_run and script_run is not stable in sole console enter_cmd or type_string are acceptable</p>
+
+<h2 id="cleanup_disk_space-cleanup_disk_space">cleanup_disk_space cleanup_disk_space();</h2>
+
+<p>In fully_patch_system and minimal_patch_system, we&#39;ll create so many snapshots. which will cost large part of the disk space. We need to delete these snapshots before the migration only if the available space is less than DISK_LOW_WATERMARK.</p>
 
 
 </body>
