deploy: 4359edff9435b14bda592348b5638e107dbf606d

--- a/version_utils.html
+++ b/version_utils.html
@@ -25,6 +25,7 @@
       <li><a href="#is_livecd">is_livecd</a></li>
       <li><a href="#check_version">check_version</a></li>
       <li><a href="#is_microos">is_microos</a></li>
+      <li><a href="#is_leap_micro">is_leap_micro</a></li>
       <li><a href="#is_sle_micro">is_sle_micro</a></li>
       <li><a href="#is_selfinstall">is_selfinstall</a></li>
       <li><a href="#is_tumbleweed">is_tumbleweed</a></li>
@@ -114,6 +115,10 @@
 <h2 id="is_microos">is_microos</h2>
 
 <p>Check if distribution is openSUSE MicroOS with optional filter: Media type: DVD (iso) or VMX (all disk images) Version: Tumbleweed | 15.2 (Leap) Flavor: DVD | MS-HyperV | XEN | KVM-and-Xen | ..</p>
+
+<h2 id="is_leap_micro">is_leap_micro</h2>
+
+<p>Check if distribution is openSUSE Leap Micro</p>
 
 <h2 id="is_sle_micro">is_sle_micro</h2>
 
@@ -319,13 +324,13 @@
 
 <dl>
 
-<dt id="Around-line-620">Around line 620:</dt>
+<dt id="Around-line-636">Around line 636:</dt>
 <dd>
 
 <p>&#39;=item&#39; outside of any &#39;=over&#39;</p>
 
 </dd>
-<dt id="Around-line-650">Around line 650:</dt>
+<dt id="Around-line-666">Around line 666:</dt>
 <dd>
 
 <p>You forgot a &#39;=back&#39; before &#39;=head2&#39;</p>
